--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.13",
     "@react-three/drei": "^9.88.0",
     "@react-three/fiber": "^8.14.5",
     "framer-motion": "^10.16.4",
